force-app/main/default/objects/MembroEquipe__c/MembroEquipe__c.object-meta.xml
<CustomObject>
    <description>Vincula um usuário responsável pelo atendimento dos leads a uma equipe de roleta de
        leads</description>
    <label>Membro da equipe</label>
    <nameField>
        <label>Nome do membro da equipe</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membros da equipe</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>