force-app/main/default/objects/MembroEquipe__c/fields/Diretor_Geral__c.field-meta.xml
<CustomField>
    <fullName>Diretor_Geral__c</fullName>
    <formula>Usuario__r.Reportase__r.Reportase__r.Reportase__r.FirstName &amp; &quot; &quot; &amp; Usuario__r.Reportase__r.Reportase__r.Reportase__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diretor Geral</label>
    <type>Text</type>
</CustomField>