force-app/main/default/objects/MembroEquipe__c/fields/Gerente_Salao__c.field-meta.xml
<CustomField>
    <fullName>Gerente_Salao__c</fullName>
    <formula>Usuario__r.Reportase__r.FirstName &amp; &quot; &quot; &amp; Usuario__r.Reportase__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gerente Salao</label>
    <type>Text</type>
</CustomField>